# node-executorch

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  cmake-format.yml  format.yml  release.yml
cmake/: Utils.cmake  aarch64-linux-gnu.clang.toolchain.cmake  aarch64-linux-gnu.gcc.toolchain.cmake  clang-aarch64-linux-gnu.toolchain.cmake  mingw-w64-aarch64.clang.toolchain.cmake  mingw-w64-aarch64.toolchain.cmake  mingw-w64-x86_64.clang.toolchain.cmake  mingw-w64-x86_64.toolchain.cmake
lib/: binding.ts  index.test.ts  index.ts  types.ts
lib/__fixtures__/: mul.pte
lib/__snapshots__/: index.test.ts.snap
scripts/: build-all.sh  build.sh  cpuinfo.patch  postneon-dist.js
src/: Module.cpp  Module.h  Sampler.cpp  Sampler.h  Tensor.cpp  Tensor.h  Tokenizer.cpp  Tokenizer.h  addon.cc  common.h  delay.cc  eterror.rs  evalue.hpp  evalue.rs  evalue_tag.rs  lib.rs  macros.rs  method_meta.rs  module.hpp  module.rs  sampler.rs  tensor.hpp  tensor.rs  tensor_type.rs  utils.cpp  utils.h
